updates for composite charts
postgres sql update script

postgres fixes

fixed chart caching, chart uploads